# SimpyMath

./: CMakeLists.txt  README.md  Rectangle.cpp  Rectangle.h  Shape.h  SimpyMath.cpp  SimpyMath.h  SimpyMath.sln  SimpyMath.vcxproj  SimpyMath.vcxproj.filters  Square.cpp  Square.h  Statistics.cpp  Triangle.cpp  Triangle.h
Application/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
Application/.cmake/api/v1/reply/: cache-v2-fc5b186a8948daf7e101.json  cmakeFiles-v1-b156d93a672aaaa5119b.json  codemodel-v2-43bce0882ea57eb3fa4a.json  codemodel-v2-46f9a35b244238fedd6d.json  index-2024-11-02T14-53-41-0530.json  index-2024-11-03T15-23-50-0644.json  target-SimpyMath-Release-8f8065fe2a2f7d9e2759.json  target-SimpyMath-Release-e086ab399721ffc4f325.json
Source/: Shape.h  Statistics.h  Triangle.cpp
src/: Circle.cpp  Circle.h  Rectangle.h  Statistics.cpp  Statistics.h  Triangle.cpp
x64-release/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
x64-release/.cmake/api/v1/reply/: cache-v2-9bbc7a4b9cb9e49bdda1.json  cmakeFiles-v1-e45c323f1cca4c8f7b41.json  codemodel-v2-d131ce43e84e2ac8a831.json  index-2025-02-05T22-22-46-0328.json  target-SimpyMath-Release-bb16a79695b214a52dd4.json
